[project]
name = "CROUStillantData"
version = "1.0.1"
description = "CROUStillant, tracking the french universities restaurants menus"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
